restore security fix - use_dynamic_url

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -22,7 +22,8 @@
       ],
       "matches": [
         "<all_urls>"
-      ]
+      ],
+      "use_dynamic_url": true
     }
   ],
   "content_scripts": [
